# robust-tableqa

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/data_loader_manager/: data_loader_for_tableqa.py  data_loader_wrapper.py
src/models/rag/: rag_model.py
src/trainers/: DPR_executor.py  ITR_DPR_executor.py  ITR_rag_executor.py  RAG_executor.py  base_executor.py  tapas_executor.py  tapex_executor.py
src/utils/: metrics_log_callback.py
