[tool.poetry]
name = "robust-tableqa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
torch = "1.10.1"
pytorch-lightning = "^1.9.5"
wandb = "0.13.4"
jsonnet = "^0.20.0"
easydict = "^1.11"
tqdm = "^4.66.1"
tfrecord = "^1.14.4"
frozendict = "^2.3.8"
bitarray = "^2.8.2"
spacy = "^3.7.2"
ujson = "^5.8.0"
gitpython = "^3.1.40"
ninja = "^1.11.1.1"
absl-py = "^2.0.0"
transformers = "^4.35.0"
tokenizers = "^0.14.1"
datasets = "^2.14.6"
faiss-cpu = "^1.7.4"
scipy = "1.10.1"
scikit-learn = "^1.3.2"
tensorboardx = "^2.6.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
